--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,10 @@ perl:
 #  - "5.14"
 #  - "5.12"
 
-before_script:
-#    - sudo apt-get install libgmp3-dev
-#    - cpanm Test::Pod # optional dependency
+before_install:
+    - sudo apt-get install libgmp3-dev
     - sudo apt-get install libmpfr-dev
+    - cpanm Test::Pod # optional dependency
     - cpanm Math::Prime::Util::GMP
     - cpanm Math::MPFR
 
