--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ perl:
 #  - "5.12"
 
 before_install:
-    - sudo apt-get install libgmp3-dev
+    - sudo apt-get install libgmp-dev
     - sudo apt-get install libmpfr-dev
     - cpanm Test::Pod # optional dependency
     - cpanm Math::Prime::Util::GMP
