--- a/.travis.yml
+++ b/.travis.yml
@@ -17,14 +17,11 @@ before_install:
 #    - sudo apt-get install libmpfr-dev
     - cpanm Test::Pod # optional dependency
     - cpanm Math::Prime::Util::GMP
-    - cpanm Math::MPFR
 
 env:
     -
     - MPU_NO_GMP=1
-    - MPU_NO_MPFR=1
-    - MPU_NO_GMP=1 MPU_NO_MPFR=1
-    - MPU_NO_XS=1 MPU_NO_GMP=1 MPU_NO_MPFR=1
+    - MPU_NO_XS=1 MPU_NO_GMP=1
 
 
 install:
