Small changes for semiprime counts

--- a/.gitignore
+++ b/.gitignore
@@ -5,39 +5,9 @@ MYMETA.*
 Util.bs
 Util.def
 pm_to_blib
-XS.[co]
-cache.o
-factor.o
-sieve.o
-sieve_cluster.o
-util.o
-isaac.o
-chacha.o
-csprng.o
-lehmer.o
-lmo.o
-primality.o
-aks.o
-random_prime.o
-prime_nth_count.o
-ramanujan_primes.o
-semi_primes.o
-entropy.o
-XS.obj
-cache.obj
-factor.obj
-sieve.obj
-util.obj
-lehmer.obj
-lmo.obj
-primality.obj
-aks.obj
-isaac.obj
-chacha.obj
-csprng.obj
-sieve_cluster.obj
-random_prime.obj
-entropy.obj
+XS.c
+*.o
+*.obj
 *.pdb
 blib*
 b[0-9][0-9][0-9][0-9][0-9][0-9].txt
